tests/samples/negative/generics/duplicate_generic_struct.ax
module duplicate_generic_struct;

struct Box<T> {
    value: T;
}

struct Box<U> {
    value: U;
}

fn main() -> i32 {
    return 0;
}
